' Generated by UML Generator
' Encoded: hPGzJyCm48Pt_mgFYPf8p16gojU015Mb8XR4SB5DEE7ObUrqeFI_utovCK62eKkal6S_zzxbBYlhmBYcbiH-eDg1WPeo2TPUEMUmR9ouPrfjyLFG2_AEN526Xab129JM6M2kFqxlwfqKm3Kz44fphh2WMqzGLVkgT5qQCLLW9wH4hkrKj8sGN5-3zKUvRagVngkvVon6V38XPpJcPdH6pUYScRQyIhXRXKawITzgwmuuawz6xYoo3VWs54mlR1JwnKH1znfvH9aGZeJqRRtHjJ0CGVPztGlbmCww4qwTeJqPZPEaGpdFdPhy2FwpZ2V15B9XE1WuKMc3K51KBXGnd3bB2N6Az4z_6mdAePJGEnJ3jFai3sZTvJXzos0sN4WwkDyHlmn-bSASZeWYR4RSgr6r6ss6gNj3wOnUHnMdCmV1yoEWwkmk3dw97R8ZhRsKWAb2TrvUnwp-sccMylnh6NoHyUF4wgabEizFyaeexdyNtm
' URL: http://www.plantuml.com/plantuml/uml/hPGzJyCm48Pt_mgFYPf8p16gojU015Mb8XR4SB5DEE7ObUrqeFI_utovCK62eKkal6S_zzxbBYlhmBYcbiH-eDg1WPeo2TPUEMUmR9ouPrfjyLFG2_AEN526Xab129JM6M2kFqxlwfqKm3Kz44fphh2WMqzGLVkgT5qQCLLW9wH4hkrKj8sGN5-3zKUvRagVngkvVon6V38XPpJcPdH6pUYScRQyIhXRXKawITzgwmuuawz6xYoo3VWs54mlR1JwnKH1znfvH9aGZeJqRRtHjJ0CGVPztGlbmCww4qwTeJqPZPEaGpdFdPhy2FwpZ2V15B9XE1WuKMc3K51KBXGnd3bB2N6Az4z_6mdAePJGEnJ3jFai3sZTvJXzos0sN4WwkDyHlmn-bSASZeWYR4RSgr6r6ss6gNj3wOnUHnMdCmV1yoEWwkmk3dw97R8ZhRsKWAb2TrvUnwp-sccMylnh6NoHyUF4wgabEizFyaeexdyNtm
' Generated on: 2026-04-13T09:38:41.638900995

@startuml
skinparam classAttributeIconSize 0
hide circle

abstract class Empleado {
  -dni: String
  -nombre: String
  -apellidos: String
  -sueldoBase: double
  --
  +Empleado(dni: String, nombre: String, apellidos: String, sueldoBase: double)
  +getDni(): String
  +getNombre(): String
  +getApellidos(): String
  +getSueldoBase(): double
  +setSueldoBase(sueldoBase: double): void
  +getSueldo(): double
}

class Comercial {
  -ventas: double
  --
  +Comercial(dni: String, nombre: String, apellidos: String, sueldoBase: double, ventas: double)
  +setVentas(ventas: double): void
  +getSueldo(): double
}

class Tecnico {
  -categoria: int
  --
  +Tecnico(dni: String, nombre: String, apellidos: String, sueldoBase: double, categoria: int)
  +getSueldo(): double
}

class Plantilla {
  -empleados: List<Empleado>
  --
  +Plantilla()
  +contratarEmpleado(empleado: Empleado): void
  +getEmpleadosPorNombre(filtroNombre: String): List<Empleado>
}

class Main {
  +{static} main(args: String[]): void
}

Comercial --|> Empleado
Tecnico --|> Empleado
Plantilla o-- Empleado
@enduml